fix:注释无用配置

--- a/src/components/ArrowCard.astro
+++ b/src/components/ArrowCard.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from "astro:content";
 import Tag from "@components/Tag.astro"
 
 type Props = {
-  entry: CollectionEntry<"blog"> | CollectionEntry<"projects">;
+  entry: CollectionEntry<"blog">;
 }
 
 const { entry } = Astro.props;
@@ -20,7 +20,7 @@ const { entry } = Astro.props;
         Reflect.has(entry.data, 'tags') &&
         <div class="flex gap-x-2">
           {
-            entry.data.tags.map((tag: string) =>
+            entry.data.tags?.map((tag: string) =>
               <div>
                 <Tag type={tag}>{tag}</Tag>
               </div>
